@@ -9,7 +9,7 @@
 <meta name="generator" content="pandoc" />
 
 
-<meta name="date" content="2015-07-12" />
+<meta name="date" content="2015-07-17" />
 
 <title>aoosClasses</title>
 
@@ -52,7 +52,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 
 <div id="header">
 <h1 class="title">aoosClasses</h1>
-<h4 class="date"><em>2015-07-12</em></h4>
+<h4 class="date"><em>2015-07-17</em></h4>
 </div>
 
 
@@ -198,10 +198,14 @@ q$<span class="kw">remove</span>()</code></pre>
 ##   self</code></pre>
 <pre class="sourceCode r"><code class="sourceCode r">hq &lt;-<span class="st"> </span><span class="kw">HistoryQueue</span>(<span class="dv">5</span>, <span class="dv">6</span>, <span class="st">&quot;foo&quot;</span>)
 hq</code></pre>
-<pre><code>## Next item is at index 1 
-## 1: 5
-## 2: 6
-## 3: foo</code></pre>
+<pre><code>## Class: HistoryQueue
+## public member:
+##   add 
+##   init 
+##   queueIsEmpty 
+##   remove 
+##   self 
+##   show</code></pre>
 <pre class="sourceCode r"><code class="sourceCode r">hq$<span class="kw">show</span>()</code></pre>
 <pre><code>## Next item is at index 1 
 ## 1: 5
