@@ -9,7 +9,7 @@
 <meta name="generator" content="pandoc" />
 
 
-<meta name="date" content="2015-07-12" />
+<meta name="date" content="2015-07-17" />
 
 <title>referenceClasses</title>
 
@@ -52,7 +52,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 
 <div id="header">
 <h1 class="title">referenceClasses</h1>
-<h4 class="date"><em>2015-07-12</em></h4>
+<h4 class="date"><em>2015-07-17</em></h4>
 </div>
 
 
